:sparkles: Few updates
Signed-off-by: Sebastian <code@sebiann.moe>

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ loom {
     splitEnvironmentSourceSets()
 
     mods {
-        "chaoscraft" {
+        "fabrictemplatemod" {
             sourceSet sourceSets.main
             sourceSet sourceSets.client
         }
